--- a/src/main/resources/mysql.properties
+++ b/src/main/resources/mysql.properties
@@ -1,4 +1,4 @@
 jdbc.driver = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://47.97.209.148:3306/smartCall?useUnicode=true&characterEncoding=UTF8&useSSL=false&autoReconnect=true&failOverReadOnly=false
+jdbc.url = jdbc:mysql://localhost:3306/exam_system?useUnicode=true&characterEncoding=UTF8&useSSL=false&autoReconnect=true&failOverReadOnly=false
 jdbc.username = root
-jdbc.password = smartcall
+jdbc.password =
